--- a/social-media-app/src/app/components/buttons/publish-btn/PublishButton.module.css
+++ b/social-media-app/src/app/components/buttons/publish-btn/PublishButton.module.css
@@ -1,7 +1,11 @@
 .btn {
     width: 80%;
     padding: .2rem;
-    
+    background-color: var(--main-color);
+    color: var(--button-font-color);
+    padding:.5rem;
+    border-radius: 5px;
+    border: none;
 }
 
 .btn:hover{
