--- a/social-media-app/src/app/components/header/MainHeader.module.css
+++ b/social-media-app/src/app/components/header/MainHeader.module.css
@@ -1,17 +1,38 @@
 .container {
-    
+    background-color: var(--default-background);
+    height: 100%;
+
+    display:flex;
+    flex-direction: column;
+
 }
 
-.container li {
+.navContainer {
+    margin-top: 2rem;
+}
+
+.navItem {
     list-style: none;
+    /* margin:1rem; */
+    padding:1.2rem;
+    width: 100%;
+    /* background-color: antiquewhite; */
+    border-radius: var(--default-border-radius);
+    &:hover{
+        background-color: var(--default-hover-background);
+        cursor:pointer;
+    }
 }
 
 .link {
     text-decoration: none;
     color: inherit;
+    padding-left:1rem;
 }
 
 .btnWrapper {
     display: flex;
     justify-content: center;
+    margin-top: auto;
+    margin-bottom: 1.5rem;
 }
